--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,14 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer base {
+
+}
+
+@layer components {
+  .fill-screen {
+    height: 100dvh;
+    width: 100dvw;
+  }
+}
