--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,4 +52,8 @@ body {
   .button-outline {
     @apply  border-2 border-white text-white py-2 px-4 rounded-3xl transition-colors hover:bg-white hover:text-black;
   }
+
+  .scene-container {
+    @apply flex flex-col justify-center items-center fill-screen bg-blue-400;
+  }
 }
