--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,6 @@ body {
   }
 
   .scene-container {
-    @apply flex flex-col justify-center items-center fill-screen bg-blue-400;
+    @apply flex flex-col justify-center items-center fill-screen;
   }
 }
