--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,8 +40,8 @@ body {
 
 @layer components {
   .fill-screen {
-    height: 100dvh;
-    width: 100dvw;
+    height: 100vh;
+    width: 100vw;
     /* overflow: hidden; */
   }
 
